--- a/revelare/revelare/report/delivery_note_by_item/delivery_note_by_item.html
+++ b/revelare/revelare/report/delivery_note_by_item/delivery_note_by_item.html
@@ -1,9 +1,10 @@
 
-<h2 class="text-center">{%= __("Delivery Note By Item") %}</h2>
+<h2 class="text-center">{%= __("PUMA AMATITLAN") %}</h2>
 <h5 class="text-center">
-	{%= frappe.datetime.str_to_user(filters.from_date) %}
-	{%= __("to") %}
-	{%= frappe.datetime.str_to_user(filters.to_date) %}
+    {%= __("Vales del ") %}
+    {%= frappe.datetime.str_to_user(filters.from_date) %}
+    {%= __("Al ") %}
+    {%= frappe.datetime.str_to_user(filters.to_date) %}
 </h5>
 <hr>
 <table class="table table-bordered">
