--- a/revelare/revelare/report/delivery_note_by_item/delivery_note_by_item.html
+++ b/revelare/revelare/report/delivery_note_by_item/delivery_note_by_item.html
@@ -10,13 +10,16 @@
 <table class="table table-bordered">
     <thead>
         <tr>
-            <th class="text-center" style="width: 12%">{%= __("Identificador") %}</th>
-            <th class="text-center" style="width: 15%">{%= __("Fecha") %}</th>
-            <th class="text-center" style="width: 18%">{%= __("Cliente") %}</th>
-            <th class="text-center" style="width: 15%">{%= __("Codigo del Producto") %}</th>
-            <th class="text-center" style="width: 15%">{%= __("Cantidad") %}</th>
-            <th class="text-center" style="width: 16%">{%= __("Tarifa de la lista de precios") %}</th>
-            <th class="text-center" style="width: 20%">{%= __("UOM") %}</th>
+            <th class="text-center" style="width: auto">{%= __("Identificador") %}</th>
+            <th class="text-center" style="width: auto">{%= __("Fecha") %}</th>
+            <th class="text-center" style="width: auto">{%= __("Cliente") %}</th>
+            <th class="text-center" style="width: auto">{%= __("Codigo del Producto") %}</th>
+            <th class="text-center" style="width: auto">{%= __("Cantidad") %}</th>
+            <th class="text-center" style="width: auto">{%= __("Tarifa de la lista de precios") %}</th>
+            <th class="text-center" style="width: auto">{%= __("UOM") %}</th>
+            <th class="text-center" style="width: auto">{%= __("DIESEL") %}</th>
+            <th class="text-center" style="width: auto">{%= __("REGULAR") %}</th>
+            <th class="text-center" style="width: auto">{%= __("SUPER") %}</th>
         </tr>
     </thead>
     <tbody>
